--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-gif-hdjjf-creando",
+  "name": "proyecto-gif-hdjjf",
   "private": true,
   "version": "0.0.0",
   "type": "module",
